# llm-proxy-auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_SAFETY_PLAYBOOK.md  CASE_STUDY.md  RELEASE_NOTES_V0.1.md  SCORING_MODEL.md
examples/: trust_report_example.md
proxy_auditor/: cli.py  client.py  probes.py  report.py  scoring.py
tests/: test_cli.py  test_probes.py  test_report.py  test_scoring.py
